liveness check rollback

--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -34,9 +34,10 @@ spec:
             periodSeconds: 5
             failureThreshold: 10
           livenessProbe:
-            tcpSocket:
-              port: 8081
-            initialDelaySeconds: 15
-#            timeoutSeconds: 2
-            periodSeconds: 20
-#            failureThreshold: 5
+            httpGet:
+              path: '/actuator/health'
+              port: 8080
+            initialDelaySeconds: 120
+            timeoutSeconds: 2
+            periodSeconds: 5
+            failureThreshold: 5
