--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -34,10 +34,9 @@ spec:
             periodSeconds: 5
             failureThreshold: 10
           livenessProbe:
-            httpGet:
-              path: '/actuator/health'
+            tcpSocket:
               port: 8080
-            initialDelaySeconds: 120
-            timeoutSeconds: 2
-            periodSeconds: 5
-            failureThreshold: 5
+            initialDelaySeconds: 15
+#            timeoutSeconds: 2
+            periodSeconds: 20
+#            failureThreshold: 5
